Added ArrayUtil.clone2dArray and Util.getRandomByThreadLocalRandom methods.

Fixed some visual errors in Javadoc and in the code.