@@ -1,4 +1,4 @@
-# x590.util library version 1.2.5
+# x590.util library version 1.2.6
 Это небольшая библиотека, которая используется во многих моих проектах.
 
 ### Пакеты:
