@@ -1,0 +1,6 @@
+package x590.util.function;
+
+@FunctionalInterface
+public interface TriCharFunction<R> {
+	R apply(char x, char y, char z);
+}
